Add missing handlers for quicksettings card
