# openapi.yaml
@@ -56,7 +56,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:29222/schemas/Config.json
+            - http://127.0.0.1:16206/schemas/Config.json
           format: uri
           readOnly: true
           type: string
@@ -99,7 +99,7 @@ components:
           default: true
           type: boolean
         ImmediateSensorUpdates:
-          default: false
+          default: true
           type: boolean
       required:
         - DefaultControllerType
@@ -133,6 +133,21 @@ components:
         - type
         - deviceSpecific
       type: object
+    EnforceInputConfig:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - http://127.0.0.1:16206/schemas/EnforceInputConfig.json
+          format: uri
+          readOnly: true
+          type: string
+        enforce:
+          type: boolean
+      required:
+        - enforce
+      type: object
     ErrorDetail:
       additionalProperties: false
       properties:
@@ -151,7 +166,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:29222/schemas/ErrorModel.json
+            - http://127.0.0.1:16206/schemas/ErrorModel.json
           format: uri
           readOnly: true
           type: string
@@ -198,7 +213,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:29222/schemas/InitialLaunch.json
+            - http://127.0.0.1:16206/schemas/InitialLaunch.json
           format: uri
           readOnly: true
           type: string
@@ -216,13 +231,30 @@ components:
       required:
         - KeyboardMouseEmulation
       type: object
+    OpenConfiguratorArgs:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - http://127.0.0.1:16206/schemas/OpenConfiguratorArgs.json
+          format: uri
+          readOnly: true
+          type: string
+        appId:
+          format: int32
+          minimum: 0
+          type: integer
+      required:
+        - appId
+      type: object
     OverlayChanged:
       additionalProperties: false
       properties:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:29222/schemas/OverlayChanged.json
+            - http://127.0.0.1:16206/schemas/OverlayChanged.json
           format: uri
           readOnly: true
           type: string
@@ -261,7 +293,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:29222/schemas/ShowHideUI.json
+            - http://127.0.0.1:16206/schemas/ShowHideUI.json
           format: uri
           readOnly: true
           type: string
@@ -294,7 +326,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:29222/schemas/SteamAndCefStatus.json
+            - http://127.0.0.1:16206/schemas/SteamAndCefStatus.json
           format: uri
           readOnly: true
           type: string
@@ -336,7 +368,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:29222/schemas/VIIPERStatus.json
+            - http://127.0.0.1:16206/schemas/VIIPERStatus.json
           format: uri
           readOnly: true
           type: string
@@ -351,7 +383,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:29222/schemas/VersionInfo.json
+            - http://127.0.0.1:16206/schemas/VersionInfo.json
           format: uri
           readOnly: true
           type: string
@@ -401,7 +433,7 @@ components:
       type: object
 info:
   title: SISR API
-  version: v0.4.2-127-gdcfacd5
+  version: v0.4.2-131-g346c00c
 openapi: 3.1.0
 paths:
   /api/v1/config:
@@ -520,6 +552,27 @@ paths:
         - steam
         - cef
         - inject
+  /api/v1/steam/cef/open-configurator:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/OpenConfiguratorArgs"
+        required: true
+      responses:
+        "204":
+          description: No Content
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      tags:
+        - steam
+        - cef
+        - layout-config
   /api/v1/steam/cef/overlay-state-changed:
     post:
       description: Callback for CEF Injectee when Steam overlay is opened/closed
@@ -544,6 +597,23 @@ paths:
         - callback
   /api/v1/steam/enable-cef-remote-debugging:
     post:
+      responses:
+        "204":
+          description: No Content
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+  /api/v1/steam/force-config:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/EnforceInputConfig"
+        required: true
       responses:
         "204":
           description: No Content
@@ -702,4 +772,4 @@ paths:
           description: Error
 servers:
   - description: SISR API
-    url: http://127.0.0.1:29222
+    url: http://127.0.0.1:16206
